--- a/html/MainPage.html
+++ b/html/MainPage.html
@@ -28,8 +28,8 @@
   </header>
   <div class="container">
     <nav>
-      <a href="page1.html">Resorvations</a>
-      <a href="page2.html">Tables</a>
+      <a href="reservations.html">Resorvations</a>
+      <a href="ReservedTables.html">Tables</a>
       <a href="page3.html">More?</a>
       <a href="page4.html">Options</a>
     </nav>
