--- a/html/reservations.html
+++ b/html/reservations.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Reservations - Wanne be Tabit</title>
-
+  
   <link rel="stylesheet" href="/styling_folder/dist/block.css">
   <link rel="stylesheet" href="/styling_folder/dist/composition.css">
   <link rel="stylesheet" href="/styling_folder/dist/expression.css">
   <link rel="stylesheet" href="/styling_folder/dist/utility.css">
-  
+
 </head>
 <body>
   <header>
@@ -31,7 +31,12 @@
       <form id="reservationForm">
         <!-- Date picker -->
         <label for="reservation-date">Date:</label>
-        <input type="date" id="reservation-date" name="reservation-date" required />
+        <input
+          type="date"
+          id="reservation-date"
+          name="reservation-date"
+          required
+        />
 
         <!-- Time dropdown -->
         <label for="reservation-time">Time:</label>
@@ -51,7 +56,13 @@
         </select>
 
         <label for="guests">Number of Guests:</label>
-        <input type="number" id="guests" name="guests" min="1" required />
+        <input
+          type="number"
+          id="guests"
+          name="guests"
+          min="1"
+          required
+        />
 
         <!-- Seating radio group with button-like styling -->
         <div class="radio-group">
@@ -89,7 +100,6 @@
         </div>
 
         <!-- Table options for each seating location -->
-        <!-- Outside -->
         <div id="tables-outside" class="table-options active">
           <label>Choose a Table (Outside):</label>
           <div class="table-option-group">
@@ -133,7 +143,6 @@
           </div>
         </div>
 
-        <!-- Inside -->
         <div id="tables-inside" class="table-options">
           <label>Choose a Table (Inside):</label>
           <div class="table-option-group">
@@ -177,7 +186,6 @@
           </div>
         </div>
 
-        <!-- Bar -->
         <div id="tables-bar" class="table-options">
           <label>Choose a Table (Bar):</label>
           <div class="table-option-group">
@@ -221,11 +229,12 @@
           </div>
         </div>
 
-        <button type="submit">Reserve</button>
+       <button type="submit">Reserve</button>
       </form>
     </div>
   </div>
 
-  <script src="/Models/dist/Reservations.js"></script>
+<script src="/Models/dist/Reservations.js"></script>
+
 </body>
 </html>
