--- a/html/MainPage.html
+++ b/html/MainPage.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Wanne be Tabit</title>
 
-<link rel="stylesheet" href="/styling_folder/dist/block.css">
-<link rel="stylesheet" href="/styling_folder/dist/composition.css">
-<link rel="stylesheet" href="/styling_folder/dist/expression.css">
-<link rel="stylesheet" href="/styling_folder/dist/utility.css">
+<link rel="stylesheet" href="../scss/dist/composition.css">
+<link rel="stylesheet" href="../scss/dist/utility.css">
+<link rel="stylesheet" href="../scss/dist/block.css">
+<link rel="stylesheet" href="../scss/dist/expression.css">
 
 
 </head>
