--- a/html/register.html
+++ b/html/register.html
@@ -18,6 +18,6 @@
         <button type="submit">submit</button>
     </form>
     <p>Already have account? <a href="login.html">Login</a></p>
-    <script type="module" src="dist/view.js"></script>
+    <script type="module" src="../dist/view.js"></script>
 </body>
 </html>
