--- a/html/register.html
+++ b/html/register.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>הרשמה</title>
+    <link rel="stylesheet" href="../scss/dist/composition.css">
+    <link rel="stylesheet" href="../scss/dist/utility.css">
+    <link rel="stylesheet" href="../scss/dist/block.css">
+    <link rel="stylesheet" href="../scss/dist/expression.css">
+    <script type="module" src="../dist/view.js"></script>
 </head>
 <body>
-    <h1>הרשמה</h1>
+    <h1>Register</h1>
     <form id="register-form">
         <input type="text" id="name" placeholder="Full name" required>
         <input type="email" id="email" placeholder="email" required>
@@ -18,6 +23,5 @@
         <button type="submit">submit</button>
     </form>
     <p>Already have account? <a href="login.html">Login</a></p>
-    <script type="module" src="../dist/view.js"></script>
 </body>
 </html>
