updated url for links

--- a/html/reservations.html
+++ b/html/reservations.html
@@ -243,7 +243,7 @@
     </div>
   </div>
 
-<script src="/Models/dist/Reservations.js"></script>
+<script src="/dist/Reservations.js"></script>
 
 </body>
 </html>
