--- a/html/ReservedTables.html
+++ b/html/ReservedTables.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserved Tables</title>
+    <link rel="stylesheet" href="../scss/dist/composition.css">
+    <link rel="stylesheet" href="../scss/dist/utility.css">
+    <link rel="stylesheet" href="../scss/dist/block.css">
+    <link rel="stylesheet" href="../scss/dist/expression.css">
 </head>
 <body>
     
-    <div class="reservations-list">
+    <div id="reservations-list">
         <h2>Current Reservations</h2>
         <ul id="reservations"></ul>
       </div>
-      <div id="error-message"></div>
+      
 
-      <script src="/Models/dist/Table.js"></script>
+      <script src="/dist/Table.js"></script>
   
 </body>
 </html>
