Working on RES.ts

--- a/html/reservations.html
+++ b/html/reservations.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../scss/dist/utility.css">
   <link rel="stylesheet" href="../scss/dist/block.css">
   <link rel="stylesheet" href="../scss/dist/expression.css">
+  <script type="module" src="../dist/view.js"></script>
   
 </head>
 <body>
@@ -234,7 +235,7 @@
     </div>
   </div>
 
-<script src="/dist/Reservations.js"></script>
+<!-- <script src="/dist/Reservations.js"></script> -->
 
 </body>
 </html>
