--- a/html/admin.html
+++ b/html/admin.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Wanne be Tabit</title>
+
+    <link rel="stylesheet" href="../scss/dist/composition.css">
+    <link rel="stylesheet" href="../scss/dist/utility.css">
+    <link rel="stylesheet" href="../scss/dist/block.css">
+    <link rel="stylesheet" href="../scss/dist/expression.css">
+
+
 </head>
+
 <body>
-    <h1>This is the admin page</h1>
+    <header>
+        <div class="header-grid">
+            <div class="left">
+                <a href="javascript:window.close();" class="exit-button">Exit</a>
+            </div>
+            <div class="center">
+                <h1>Wanne be Tabit</h1>
+            </div>
+            <div class="right">
+                <span class="placeholder">Exit</span>
+            </div>
+        </div>
+    </header>
+    <div class="container">
+        <nav>
+            <a href="reservations.html">Resorvations</a>
+            <a href="ReservedTables.html">Tables</a>
+            <a href="page3.html">More?</a>
+            <a href="page4.html">Options</a>
+        </nav>
+    </div>
 </body>
+
 </html>
