--- a/html/MainPage.html
+++ b/html/MainPage.html
@@ -16,7 +16,7 @@
   <header>
     <div class="header-grid">
       <div class="left">
-        <a href="javascript:window.close();" class="exit-button">Exit</a>
+        <a href="javascript:window.close();" class="exit-button" id="goMain2">Exit</a>
       </div>
       <div class="center">
         <h1>Wanne be Tabit</h1>
@@ -31,8 +31,11 @@
       <a href="reservations.html">Resorvations</a>
       <a href="ReservedTables.html">Tables</a>
       <a href="page3.html">More?</a>
-      <a href="page4.html">Options</a>
+      <a href="admin.html">Options</a>
     </nav>
   </div>
+
+<script src="/dist/exitbutton.js"></script>
+
 </body>
 </html>
