--- a/html/register.html
+++ b/html/register.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html lang="he">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>הרשמה</title>
-    <link rel="stylesheet" href="../scss/dist/composition.css">
-    <link rel="stylesheet" href="../scss/dist/utility.css">
-    <link rel="stylesheet" href="../scss/dist/block.css">
-    <link rel="stylesheet" href="../scss/dist/expression.css">
-    <script type="module" src="../dist/view.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>הרשמה</title>
 
+ 
+  <link rel="stylesheet" href="../scss/dist/composition.css" />
+  <link rel="stylesheet" href="../scss/dist/utility.css" />
+  <link rel="stylesheet" href="../scss/dist/block.css" />
+  <link rel="stylesheet" href="../scss/dist/expression.css" />
+
+ 
+  <link rel="stylesheet" href="../scss/dist/login.css" />
+
+  <script type="module" src="../dist/view.js"></script>
 </head>
-<body>
+<body class="login-page">
+  
+  <main class="login-card">
     <h1>Register</h1>
-    <form class="mainForm" id="register-form">
-        <input type="text" id="name" placeholder="Full name" required>
-        <input type="email" id="email" placeholder="email" required>
-        <input type="password" id="password" placeholder="password" required>
-        <label>
-            <input type="checkbox" id="is-admin">
-            Admin?
-        </label>
-        <button type="submit">submit</button>
-        <p>Already have account? <a href="login.html">Login</a></p>
+    <form id="register-form" class="loginForm">
+      <input
+        type="text"
+        id="name"
+        placeholder="Full name"
+        required
+      />
+      <input
+        type="email"
+        id="email"
+        placeholder="Email"
+        required
+      />
+      <input
+        type="password"
+        id="password"
+        placeholder="Password"
+        required
+      />
+
+      <div class="checkbox-group">
+        <input type="checkbox" id="is-admin" />
+        <label for="is-admin">Admin?</label>
+      </div>
+
+      <button type="submit">Submit</button>
+
+      <p>
+        Already have an account?
+        <a href="login.html">Login</a>
+      </p>
     </form>
+  </main>
 </body>
 </html>
