Editing options button display only for admins

--- a/html/MainPage.html
+++ b/html/MainPage.html
@@ -34,7 +34,7 @@
       <a href="reservations.html">Resorvations</a>
       <a href="ReservedTables.html">Tables</a>
       <a href="page3.html">More?</a>
-      <a href="admin.html">Options</a>
+      <a href="admin.html" id="options-btn" style="display: none;">Options</a>
     </nav>
   </div>
 
