--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>הרשמה</title>
+  <title>Register</title>
 
  
   <link rel="stylesheet" href="../scss/dist/composition.css" />
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="../scss/dist/block.css" />
   <link rel="stylesheet" href="../scss/dist/expression.css" />
 
- 
   <link rel="stylesheet" href="../scss/dist/login.css" />
 
   <script type="module" src="../dist/view.js"></script>
