update user managment

--- a/html/MainPage.html
+++ b/html/MainPage.html
@@ -17,7 +17,7 @@
   <header>
     <div class="header-grid">
       <div class="left">
-        <!-- <a href="javascript:window.close();" class="exit-button">Exit</a> -->
+        
         <button id="exit-btn" class="exit-button">Exit</button>
         
       </div>
@@ -33,7 +33,7 @@
     <nav>
       <a href="reservations.html">Resorvations</a>
       <a href="ReservedTables.html">Tables</a>
-      <a href="page3.html">More?</a>
+      <a href="user-management.html">users-table</a>
       <a href="admin.html">Options</a>
     </nav>
   </div>
