--- a/html/MainPage.html
+++ b/html/MainPage.html
@@ -33,8 +33,8 @@
     <nav>
       <a href="reservations.html">Resorvations</a>
       <a href="ReservedTables.html">Tables</a>
-      <a href="user-management.html">users-table</a>
-      <a href="admin.html">Options</a>
+      <a href="page3.html">More?</a>
+      <a href="admin.html" id="options-btn" style="display: none;">Options</a>
     </nav>
   </div>
 
