--- a/html/MainPage.html
+++ b/html/MainPage.html
@@ -33,7 +33,7 @@
     <nav>
       <a href="reservations.html">Resorvations</a>
       <a href="ReservedTables.html">Tables</a>
-      <a href="page3.html">More?</a>
+      <a href="user-management.html">user-management</a>
       <a href="admin.html" id="options-btn" style="display: none;">Options</a>
     </nav>
   </div>
