Moving reservations  into admin page

--- a/html/admin.html
+++ b/html/admin.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="/scss/dist/composition.css">
 <link rel="stylesheet" href="/scss/dist/expression.css">
 <link rel="stylesheet" href="/scss/dist/utility.css">
+<script type="module" src="../dist/ReservationsController.js"></script>
 
 </head>
 <body>
@@ -40,6 +41,9 @@
       <section id="section-reservations" class="admin-section">
         <h2>Reservation Management</h2>
         <p>View and manage reservations here.</p>
+        <ul id="reservations-list">
+          <!-- Reservations will be loaded here dynamically -->
+      </ul>
         
       </section>
     
