Fixing main page admin display

--- a/html/MainPage.html
+++ b/html/MainPage.html
@@ -32,8 +32,10 @@
   <div class="container">
     <nav>
       <a href="reservations.html">Resorvations</a>
-      <a href="ReservedTables.html">Tables</a>
-      <a href="user-management.html">user-management</a>
+      <!-- <a href="ReservedTables.html">Tables</a>
+      <a href="user-management.html">user-management</a> -->
+      <a href="ReservedTables.html" id="tabels-btn" style="display: none;">Tables</a>
+      <a href="user-management.html" id="user-mn-btn" style="display: none;">user-management</a>
       <a href="admin.html" id="options-btn" style="display: none;">Options</a>
     </nav>
   </div>
