--- a/html/admin.html
+++ b/html/admin.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin-MainPage</title>
 
-<link rel="stylesheet" href="/scss/dist/block.css">
-<link rel="stylesheet" href="/scss/dist/composition.css">
-<link rel="stylesheet" href="/scss/dist/expression.css">
-<link rel="stylesheet" href="/scss/dist/utility.css">
+<link rel="stylesheet" href="../scss/dist/block.css">
+<link rel="stylesheet" href="../scss/dist/composition.css">
+<link rel="stylesheet" href="../scss/dist/expression.css">
+<link rel="stylesheet" href="../scss/dist/utility.css">
 <script type="module" src="../dist/ReservationsController.js"></script>
 
 </head>
