--- a/html/user-management.html
+++ b/html/user-management.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>User Management</title>
   <!-- You can reuse your global CSS, plus add this page’s CSS if needed -->
-  <link rel="stylesheet" href="/scss/dist/block.css" />
-  <link rel="stylesheet" href="/scss/dist/composition.css" />
-  <link rel="stylesheet" href="/scss/dist/expression.css" />
-  <link rel="stylesheet" href="/scss/dist/utility.css" />
-  <link rel="stylesheet" href="/scss/dist/admin.css" />
+  <link rel="stylesheet" href="../scss/dist/block.css" />
+  <link rel="stylesheet" href="../scss/dist/composition.css" />
+  <link rel="stylesheet" href="../scss/dist/expression.css" />
+  <link rel="stylesheet" href="../scss/dist/utility.css" />
+  <link rel="stylesheet" href="../scss/dist/admin.css" />
 </head>
 <body class="admin-page">
     <header>
