fixing more bugs

--- a/html/admin.html
+++ b/html/admin.html
@@ -62,8 +62,8 @@
       </section>
 
 
-      <script src="/dist/admin.js"></script>
-      <script src="/dist/backbuttons.js"></script>
+      <script src="../dist/admin.js"></script>
+      <script src="../dist/backbuttons.js"></script>
       
 </body>
 </html>
