--- a/html/user-management.html
+++ b/html/user-management.html
@@ -46,7 +46,7 @@
   </main>
 
   
-  <script src="/dist/admin2.js"></script>
-  <script src="/dist/backbutton2.js"></script>
+  <script src="../dist/admin2.js"></script>
+  <script src="../dist/backbutton2.js"></script>
 </body>
 </html>
